# masala_public_seating_optimization_plugins

./: .gitignore  Doxyfile.src  README.md  buildme.sh  clean.sh  delete_build.sh  run_test_1.sh  run_test_1_hfmc.sh  run_test_1_mc.sh  run_test_1_qpu.sh  run_test_2.sh  run_test_2_hfmc.sh  run_test_2_mc.sh  run_test_2_qpu.sh  run_test_3_hfmc.sh  run_test_3_mc.sh  run_test_3_qpu.sh  run_test_4_hfmc.sh  run_test_4_mc.sh  run_test_4_qpu.sh  run_test_5_hfmc.sh  run_test_5_mc.sh  run_test_5_qpu.sh  run_test_5s_hfmc.sh  run_test_5s_mc.sh  run_test_5s_qpu.sh  visualize.sh
cmake/: CMakeLists.txt  compiler.cmake
python/: visualize_solutions.py
src/: seating_optimization_masala_plugins.md
src/applications/: link_dependencies.txt
src/applications/applications_apps/: optimize_seating.cc
src/registration/: link_dependencies.txt  register_sub_libraries.cc  register_sub_libraries.hh
src/registration/registration_apps/: generate_registration_api.cc
src/registration_api/: register_library.cc  register_library.hh
src/seating_optimization/api/: generate_api_classes.cc  generate_api_classes.hh
src/seating_optimization/seating_optimization_apps/: generate_seating_optimization_api.cc
src/seating_optimization/seating_problem/: SeatingProblem.cc  SeatingProblem.fwd.hh  SeatingProblem.hh  SeatingSolution.cc  SeatingSolution.fwd.hh  SeatingSolution.hh
src/seating_optimization/seating_problem_elements/: CircularTable.cc  CircularTable.fwd.hh  CircularTable.hh  Guest.cc  Guest.fwd.hh  Guest.hh  RectangularRoom.cc  RectangularRoom.fwd.hh  RectangularRoom.hh  Room.cc  Room.fwd.hh  Room.hh  Seat.cc  Seat.fwd.hh  Seat.hh  SeatingElementBase.cc  SeatingElementBase.fwd.hh  SeatingElementBase.hh  Table.cc  Table.fwd.hh  Table.hh
src/seating_optimization/seating_problem_elements/constraints/: Constraint.cc  Constraint.fwd.hh  Constraint.hh  GuestOverlapConstraint.cc  GuestOverlapConstraint.fwd.hh  GuestOverlapConstraint.hh  GuestPairAdjacentSeatConstraint.cc  GuestPairAdjacentSeatConstraint.fwd.hh  GuestPairAdjacentSeatConstraint.hh  GuestPairProximityConstraint.cc  GuestPairProximityConstraint.fwd.hh  GuestPairProximityConstraint.hh  GuestPairSameTableConstraint.cc  GuestPairSameTableConstraint.fwd.hh  GuestPairSameTableConstraint.hh
src/seating_optimization/seating_problem_elements/restraints/: Restraint.cc  Restraint.fwd.hh  Restraint.hh  RestrictGuestToSeatsRestraint.cc  RestrictGuestToSeatsRestraint.fwd.hh  RestrictGuestToSeatsRestraint.hh  RestrictGuestToTableRestraint.cc  RestrictGuestToTableRestraint.fwd.hh  RestrictGuestToTableRestraint.hh
test_data/: example_problem_1.txt  example_problem_2.txt  example_problem_4.txt  example_problem_5.txt  example_problem_5_simplified.txt
test_scratch/: clean.sh  description.md
tests/unit/registration/: link_dependencies.txt  registration_tests.cc
tests/unit/registration/version_manager/: RegistrationVersionCheckTests.cc
tests/unit/seating_optimization/: link_dependencies.txt  seating_optimization_tests.cc
